feat(audit): Refactor audit log search to use criteria object and add constant variables